# deep-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
requirement/: design.md  design2.md  refactor_plan_v3.md  refactor_requirements.md  stream_system_design.md  todo.md
src/: agent.py  llm_client.py  prompts.py  state_manager.py
src/deep_research/: agent.py  cli.py  config.py  console_renderer.py  gui.py  llm_client.py  log.py  logs.py  models.py  orchestrator.py  prompt.py  prompts.py  state_manager.py  stream_handler.py  sub_agent.py  task_logger.py  tool_manager.py  validator.py
src/deep_research/agents/: base.py  orchestrator.py  sub_agent.py  validator.py
src/deep_research/core/: llm_client.py  log.py  stream_handler.py
src/deep_research/prompts/: orchestrator.py  sub_agent.py  validator.py
src/deep_research/tools/: __init__.py  _base.py  delegate.py  manager.py  search.py  visit.py
src/tools/: __init__.py  edit.py  grep.py  ls.py  read_file.py  search.py  todo.py  web_fetch.py  write_file.py
